remapped all strings with their corresponding consts from the Assets file.

--- a/assets/lang/bg.json
+++ b/assets/lang/bg.json
@@ -4,6 +4,6 @@
   "strength": "Сила:",
   "sugars": "Захар:",
   "milk": "Мляко:",
-  "no_sugar_selected": "Без захар.",
-  "no_milk_selected": "И без мляко."
+  "no_sugar_selected": "bез захар.",
+  "no_milk_selected": "без мляко."
 }
